@@ -1463,6 +1463,9 @@
    it because _open_osfhandle doesn't work.  */
 #define NO_SOCKET_TO_FD 1
 
+/* 1-second nominal clock resolution is okay. */
+#define OK_TO_USE_1S_CLOCK 1
+
 /* Is this true on NT?  Seems like I remember reports that NT 3.51 has
    problems with 200K writes (of course, the issue of large writes is
    moot since the use of buffer.c ensures that writes will only be as big
